<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="HOMS_Gantry" Id="{5814da8a-5a42-4fb1-bc87-835995743a9d}">
    <Declaration><![CDATA[TYPE HOMS_Gantry :
STRUCT
	PAxis	:	HOMS_GantryAxis; //Primary Axis, upstream
	SAxis	:	HOMS_GantryAxis; //Secondary Axis, downstream
	VAxis	:	HOMS_GantryAxis; //Virtual Axis
	Mode	:	E_GantryMode; //Current gantry mode
	ModeReq:	E_GantryMode := GantryModeCoupled; //Requested gantry mode
	Diff	:	REAL;	//Gantry difference
	DiffFlt	:	BOOL := TRUE; //Gantry difference fault, true means fault
	xUncouple   : BOOL := FALSE;//Switch to uncouple axis
	PAxisActPos	:	LREAL; //Encoder Readback
	SAxisActPos	:	LREAL; //Encoder Readback

	(* Parameters
	These should come primarily from the ESD *)
	DiffTol	:	LREAL := 0.200;	//Gantry difference tolerance (mm)
	DiffHys	:	LREAL := 0.050;	//Gantry difference hysteresis (mm)
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>